--- a/example/react/template/index.html
+++ b/example/react/template/index.html
@@ -12,9 +12,9 @@
         }
         window.PromiseRejectionEvent = function () {};
     </script>
-    <title>simple</title>
-<link href="http://localhost:8080/index@c8cad3d7fdc83c46bd7a.css" rel="stylesheet"></head>
+    <title>REACT EXAMPLE</title>
+</head>
 <body>
     <div id="app"></div>
-<script type="text/javascript" src="http://localhost:8080/index@54a3471a05ddafae3f3e.js"></script></body>
+</body>
 </html>
