--- a/example/simple/template/index.html
+++ b/example/simple/template/index.html
@@ -13,8 +13,29 @@
         window.PromiseRejectionEvent = function () {};
     </script>
     <title>simple</title>
+    <style>
+        #page { width: 100%; overflow: hidden; position: relative; }
+        .nav { width: 200px; float: right; }
+        .main { width: 100%; float: left; padding-left: 110px; }
+        .sub { width: 100px; float: left; margin: 10px 0 10px -100px; }
+        .main { border: 1px solid #000; }
+        .nav, .sub { border: 1px dashed #000; height: 300px; }
+        .sub { height: 280px; }
+        .normal { margin-left: 50px; height: 100px; background-color: aquamarine; }
+    </style>
+    <script>
+        document.documentElement.style.fontSize = '16px';
+    </script>
 </head>
 <body>
     <div id="app"></div>
+    <div id="page">
+        <div class="main">
+            <div class="sub"></div>
+            <div class="normal"></div>
+        </div>
+    </div>
+    <div id="root"></div>
+    <script src="http://localhost:3001/static/js/bundle.js"></script>
 </body>
 </html>
